--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-screens": "~3.4.0",
     "react-native-unimodules": "~0.14.5",
     "react-native-web": "~0.13.12",
+    "react-native-youtube": "^2.0.2",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0"
   },
